# cop3530-project-3

./: CMakeLists.txt  README.md  document.cpp  gui.py  inverted_index.cpp  main.cpp  suffix_array.cpp  suffix_array.h  test.cpp  test_inverted_index.cpp  test_suffix_array.cpp  test_tokenizer.cpp  tokenizer.cpp  utils.cpp
src/: README.md  custom_hash_table.h  document.h  file_converters.py  generate_summary.py  gui.py  gui_helpers.py  gutenberg.cpp  gutenberg.h  gutenberg_api.py  inverted_index.cpp  inverted_index.h  main.cpp  menu.cpp  menu.h  performance.cpp  performance.h  suffix_array.cpp  suffix_array.h  tokenizer.h  utils.cpp  utils.h  worker_threads.py
test_data/: A_Collection_of_Gospel_Hymns_in_Ojibway_and_English_Printed__33128.txt  A_World_is_Born_22544.txt  All_cats_are_gray_29019.txt  American_Pomology._Apples_37596.txt  Andrée_and_His_Balloon_63603.txt  Astounding_Stories_of_Super-Science_January_1931_30177.txt  Battery_E_in_France_149th_Field_Artillery,_Rainbow_(42nd)_Di_33119.txt  Candide_19942.txt  Chocolate_and_Cocoa_Recipes_and_Home_Made_Candy_Recipes_13177.txt  Egoists,_A_Book_of_Supermen_Stendhal,_Baudelaire,_Flaubert,__47454.txt  Erotika_Biblion_43438.txt  Letters_of_a_Javanese_Princess_34647.txt  Life_and_works_of_Alexander_Csoma_de_Körös__$b_A_biography_c_74056.txt  Man_and_Superman_A_Comedy_and_a_Philosophy_3328.txt  O_Pioneers!_22448.txt  Psalms_-_Selections_from_the_World_English_Bible_Translation_20688.txt  Renaissance_in_Italy,_Volume_5_(of_7)_Italian_Literature,_Pa_36448.txt  Slave_Narratives_A_Folk_History_of_Slavery_in_the_United_Sta_36020.txt  Some_Reptiles_and_Amphibians_from_Korea_34949.txt  (+20 more)
(+3 files in other folders)
